tests/compiler/diagnostics-engine/tests/multiple-errors/expected.txt
error: Invalid class member declaration: found 'var'.
 --> source.jack:2:5
   |
 2 |     var x, y;
   |     ^~~
note: Expected a class variable or subroutine declaration.

error: Missing variable name
 --> source.jack:5:15
   |
 5 |         var xy;
   |               ^
note: Perhaps you forgot to specify a type?
